# EduConnect

./: .env.example  .eslintrc.json  .gitignore  BLUEPRINT.md  CHANGELOG.md  NEXT-STEPS.md  README.md  SETUP.md  STATUS.md  memory.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  project.md  target.md  tsconfig.json  vercel.json
.amazonq/rules/: refatrules.md
.github/workflows/: deploy.yml
app/: layout.tsx  page.tsx
app/api/auth/: route.ts
app/api/classes/: route.ts
app/api/materials/: route.ts
app/classes/: layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/materials/: layout.tsx  page.tsx
app/students/: layout.tsx  page.tsx
components/: providers.tsx
components/auth/: login-form.tsx
components/dashboard/: overview.tsx  quick-actions.tsx  recent-activity.tsx  stats-cards.tsx
components/layout/: header.tsx  sidebar.tsx
components/ui/: error-boundary.tsx  loading.tsx
database/: sqlite-schema.sql  supabase-schema.sql
docs/: Home.md  _Sidebar.md
docs/api/: Authentication.md
docs/contributing/: Contributing.md
docs/deployment/: Production.md
docs/development/: Architecture.md
docs/getting-started/: Quick-Start.md
docs/troubleshooting/: Common-Issues.md
docs/user-guide/: Dashboard.md
features/dashboard/: index.ts
lib/: api-client.ts  constants.ts  database.ts  mock-data.ts  sqlite.ts  supabase.ts  utils.ts  validations.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
stores/: auth-store.ts
types/: database.ts  index.ts
workflows/: deploy.yml
(+5 files in other folders)
