[package]
name = "educonnect"
version = "2.0.0"
description = "Modern Educational Management Platform"
authors = ["EduConnect Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "window-start-dragging", "dialog-open", "fs-remove-file", "window-hide", "fs-create-dir", "window-unminimize", "fs-exists", "fs-read-file", "window-unmaximize", "window-close", "fs-write-file", "window-maximize", "notification-all", "window-show", "window-minimize", "shell-open", "dialog-save"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
